--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ img{
     font-weight: bolder;
     font-family: "Calibri", serif ;
     color: yellow;
+    text-shadow: 0 0 10px red,0 0 20px #5310be,0 0 30px red,0 0 40px #5310be;
 }
 select {
     appearance: none;
